--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="linuxcmd.html">Linux Příkazy</a>
-        <a href="linuxdistros.html">Linux Distribuce</a>
+        <a href="linuxenv.html">Linux Enviroment</a>
         <a href="archinstalation.html">Jak nainstalovat Arch</a>
         <a href="odinstalovat.html">Odinstalovat se (nehodnotit)</a>
         <a href="about.html">O mně</a>
