--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Web je neustále ve vývoji, takže se může časem rozrůst o další témata jako:</p>
                     <ul>
                         <li> Vlastní skripty a automatizace</li>
-                        <li> Hraní her na Linuxu (např. War Thunder, ESO, Minecraft)</li>
+                        <li> Hraní her na Linuxu</li>
                         <li> Správa balíčků a práce s terminálem</li>
                     </ul>
 
