--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <p><strong>Matyáš Beran</strong></p>
 
             
-            <p>Chodil jsem na MŠ a ZŠ Těrlicko. Aktuálně studuji na SPŠE Havířov, obor Řídicí systémy.</p>
+            <p>Aktuálně studuji na SPŠE Havířov, obor Řídicí systémy.</p>
             <p>Ve volném čase se věnuji tvorbě her, programování a projektům s Arduino.</p>
             <p>Mezi moje oblíbené hry patří War Thunder, The Elder Scrolls Online a Minecraft.</p>
 
