--- a/archinstalation.html
+++ b/archinstalation.html
@@ -100,7 +100,7 @@
                         </th>
                             <th>Oddíl
                         </th>
-                            <th><a href="https://en.wikipedia.org/wiki/GUID_Partition_Table#Partition_type_GUIDs" class="extiw" title="wikipedia:GUID Partition Table">Druh oddílu</a>
+                            <th><a href="https://en.wikipedia.org/wiki/GUID_Partition_Table#Partition_type_GUIDs" title="wikipedia:GUID Partition Table">Druh oddílu</a>
                         </th>
                             <th>Doporučená velikost
                         </th></tr>
@@ -208,15 +208,15 @@
                 <a>Ted nainstalujeme potřebné balíčky a samotný linux</a>
                 <pre># pacstrap /mnt base linux linux-firmware sof-firmware base-devel grub efibootmgr nano networkmanager</pre>
                 <ul>
-                    <li><strong>base</strong> – základ systému</li>
-                    <li><strong>linux</strong> – kernel jádro</li>
-                    <li><strong>linux-firmware</strong> – hardware firmware</li>
-                    <li><strong>sof-firmware</strong> – zvuk firmware</li>
-                    <li><strong>base-devel</strong> – build nástroje</li>
-                    <li><strong>grub</strong> – boot loader</li>
-                    <li><strong>efibootmgr</strong> – EFI správa</li>
-                    <li><strong>nano</strong> – text editor</li>
-                    <li><strong>networkmanager</strong> – síť správce</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/any/base/" title="pacstrap:base">base</a></strong> – základ systému</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/x86_64/linux/" title="pacstrap:linux">linux</a></strong> – kernel jádro</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/any/linux-firmware/" title="pacstrap:linux-firmware">linux-firmware</a></strong> – hardware firmware</li>
+                    <li><strong><a href="https://archlinux.org/packages/extra/x86_64/sof-firmware/" title="pacstrap:sof-firmware">sof-firmware</a></strong> – zvuk firmware</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/any/base-devel/" title="pacstrap:base-devel">base-devel</a></strong> – build nástroje</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/x86_64/grub/" title="pacstrap:grub">grub</a></strong> – boot loader</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/x86_64/efibootmgr/" title="pacstrap:efi">efibootmgr</a></strong> – EFI správa</li>
+                    <li><strong><a href="https://archlinux.org/packages/core/x86_64/nano/" title="pacstrap:nano">nano</a></strong> – text editor</li>
+                    <li><strong><a href="https://archlinux.org/packages/extra/x86_64/networkmanager/" title="pacstrap:networkmanager">networkmanager</a></strong> – správce sítě</li>
                 </ul>
                 <a class="dodatek">Instalace může zabrat i 20 minut</a>
                 <br><img src="image/26.png" alt="img"><hr><br>
